--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,3 +1,27 @@
 .board {
   border: 1px solid #000;
 }
+.wrapper {
+  position: relative;
+  display: inline-block;
+  .restart-overlay {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.7);
+    span {
+      font-size: 30px;
+      color: red;
+      margin-bottom: 20px;
+    }
+  }
+  &.game-over .restart-overlay {
+    display: flex;
+  }
+}
